--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 Flask==2.3.3
 gunicorn==21.2.0
+requests==2.31.0
+python-dotenv==1.0.1
+sentence-transformers==2.2.2
+faiss-cpu==1.8.0
+numpy==1.26.4
