--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.3.3
+flask==2.3.3
 gunicorn==21.2.0
-requests==2.31.0
-python-dotenv==1.0.1
 sentence-transformers==2.2.2
+huggingface_hub==0.19.4
 faiss-cpu==1.8.0
-numpy==1.26.4
+numpy
