--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ gunicorn==21.2.0
 sentence-transformers==2.2.2
 huggingface_hub==0.19.4
 faiss-cpu==1.8.0
-numpy<2  # or numpy==1.24.4
+numpy<2  # Required for FAISS compatibility
+google-generativeai==0.3.2  # For Gemini integration
+regex==2023.10.3  # For text preprocessing
+requests==2.31.0  # Required by multiple dependencies
+protobuf==4.25.3  # Required by google-generativeai
